# Websockify-Standalone

./: .gitignore  CMakeLists.txt  README.md  WebsocketBridge.c  base64.h  md5.c  sha1.c  websocket.h
debian/: CMakeLists.txt  changelog  control  manpages  rules  virtualizm-wsproxy.1  virtualizm-wsproxy.default  virtualizm-wsproxy.logrotate  virtualizm-wsproxy.postinst  virtualizm-wsproxy.postrm  virtualizm-wsproxy.rsyslog  virtualizm-wsproxy.service  websockify.1  websockify.default  websockify.logrotate  websockify.postinst  websockify.postrm  websockify.preinst  websockify.rsyslog  websockify.service
src/: CMakeLists.txt  WebsocketBridge.c  WebsocketBridge.h  acl.c  acl.h  base64.c  md5.h  version.h.cmake  websocket.c  websocket.h  websockify.c  wsproxy.c
test/: tcp_echo.py  ws_client.py
